Trying fix for sidebar issue on mobile

--- a/practice_business/src/styles/Sidebar.scss
+++ b/practice_business/src/styles/Sidebar.scss
@@ -2,25 +2,27 @@
 @import './utilities';
 
 .sidebar{
-    overflow: hidden;
-    height: 1000vh;
-    max-height: 2875px;
+    height: 100%;
     width: 260px;
     position: absolute;
-    // top: 0;
+    top: 0;
     left: -260px;
     z-index: 100;
     background: $background-light-primary;
     overflow: hidden;
+    &.active{
+        position: fixed;
+    }
     .sidebar-container{
-        position: fixed !important;
         width: 100%;
         max-width: 260px;
-        height: 460px;
+        // height: 460px;
+        max-height: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-start;
         transition: top ease;
+        background: $background-light-primary;
 
         .sidebar-logo{
             width: 98%;
@@ -30,6 +32,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: $background-light-secondary;
 
             .link{
                 background-color: #fff;
@@ -47,6 +50,8 @@
                     max-height: auto;
                     max-width: 100%;
                     cursor: pointer;
+                    background-color: $background-light-secondary;
+
                 }
     
             }
